--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title> Villa Anahata - Love Bali Villas Blogs</title>
-  <meta content="" name="Villa Anahata: Discover Modern Luxury in a 2-Bedroom Retreat in Seminyak Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
+  <meta content="" name="Love Bali Villas, @lovebalivillas, Love Bali Villas Blogs, Romantic honeymoon villa Canggu, Love Bali Villas recommendation, Expedia partner villa Canggu, Private pool honeymoon retreat, Romantic villa accommodation, Intimate Bali getaway, Luxury honeymoon rental, Canggu romantic escapade, Exquisite honeymoon haven, Villa Anahata, ">
   <meta content="" name="Immerse yourself in modern luxury at Villa Anahata, a sublime 2-bedroom villa in Seminyak endorsed by Love Bali Villas. Experience elegance, tranquility, and personalized service.   ">
 
   <!-- Favicons -->
@@ -186,7 +186,7 @@
           <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
 <script class="eg-widgets-script" src="https://affiliates.expediagroup.com/products/widgets/assets/eg-widgets.js"></script>
           <p>
-            Immerse yourself in modern luxury at <a href="https://expedia.com/affiliates/lovebalivillas/villa-anahata" target="_blank">Villa Anahata</a>, a sublime 2-bedroom villa in Seminyak endorsed by Love Bali Villas. Experience elegance, tranquility, and personalized service. Book confidently through our partnership with Expedia for an unforgettable escape. #VillaAnahata #SeminyakLuxury #LoveBaliVillasRecommendation
+            <a href="https://www.anyadya.club/" target="_blank"> (Anya Dya - Aug 23) </a>  Immerse yourself in modern luxury at <a href="https://expedia.com/affiliates/lovebalivillas/villa-anahata" target="_blank">Villa Anahata</a>, a sublime 2-bedroom villa in Seminyak endorsed by Love Bali Villas. Experience elegance, tranquility, and personalized service. Book confidently through our partnership with Expedia for an unforgettable escape. #VillaAnahata #SeminyakLuxury #LoveBaliVillasRecommendation
 
           </p>
 <p> 
